--- a/assets/styles/mixins.scss
+++ b/assets/styles/mixins.scss
@@ -32,6 +32,13 @@
     }
 }
 
+@mixin p2 {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 600;
+    font-style: normal;
+}
+
 @mixin p3 {
     font-size: 13px;
     line-height: 16px;
