--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -2,5 +2,6 @@
     --typo-gray: #1111117A;
     --typo-dark: #111111;
     --typo-contrast: #01A7FD;
+    --typo-light: #FFFFFF;
     --gray-bg: #FAFAFA;
 }
